# badscan

./: .gitignore  Cargo.toml  README.md  badscan.example.toml  config.toml  temp.txt
src/: config.rs  fingerprint.rs  interface.rs  lib.rs  main.rs  protocols.rs  scanner.rs  tcpscanner.rs  udpscanner.rs  utils.rs
src/protocols/: mod.rs  query.rs  raknet.rs  slp.rs
src/tcp/: template.rs
