[package]
name = "badscan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.37"
default-net = "0.22.0"
once_cell = "1.19.0"
pnet = "0.34.0"
serde = "1.0.197"
serde_derive = "1.0.197"
thiserror = "1.0.58"
toml = "0.8.10"
